frontend/test/should_fail/cast_transient_object_types.grg
using cast_model;

rule r {
	modify {
	---
		eval {
			def ref unrelTO:UnrelTO = (UnrelTO)new TO();
		}
	}
}
